<?xml version="1.0"?>
<package>
  <name>tedusar_nav_msgs</name>
  <version>1.0.0</version>
  <description>The tedusar_nav_msgs package</description>
  <maintainer email="peter.lepej@uni-mb.si">Peter Lepej</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tedusar_nav_msgs</url>


  <author email="peter.lepej@uni-mb.si">Peter Lepej</author>
  <author email="johannes.maurer@ist.tugraz.at">Johannes Maurer</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
